@@ -1,3 +1,10 @@
+2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/gtksourcecompletiontriggerkey.h:
+	* gtksourceview/gtksourcecompletiontriggerkey.c:
+	* tests/completion-simple.c:
+	Added set/get_enable_filter.
+
 2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
 
 	* tests/gsc-provider-devhelp.h:
